# uniapi-py

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  MEMORY.md  Makefile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
.claude/memory/: glm-coding-plan-limitation.md  raw-passthrough-usage-capture.md
.github/workflows/: deploy.yml  test.yml
.superpowers/sdd/: progress.md  task-1-brief.md  task-4-report.md
alembic/: env.py
alembic/versions/: 11cc9084984c_add_mcp_servers_table.py  12e5c1705d30_drop_old_quota_columns_user_quota_token_.py  254b7e6cbcbb_add_recharge_requests_table.py  306a8eeb6f40_remove_passkey_totp_aff_security_fields.py  4125d916f2eb_add_user_balance_and_log_cost_fields.py  582fd30bfb5b_add_login_lockout_fields.py  84e2074b399d_add_redemption_codes_table.py  8bae083a0c2d_merge_login_lockout_and_session_version_.py  a1b2c3d4e5f6_add_login_lockout_fields.py  a7719b8_add_pending_totp_fields.py  c8c4a8ff0bfa_add_session_version_to_users.py  cccd19f2a591_drop_wechat_lark_oidc_columns.py
app/: config.py  database.py  dependencies.py  error_codes.py  exceptions.py  main.py  middleware.py  version.py
app/budget/: arbiter.py  pricing.py  (+1 more)
docs/: API中转站_费用控制方案设计.md  API中转站协议转换架构讨论.md  CCBOT_API参考手册.md  DeepSeek_API接入参考手册.md  GLM_API接入参考手册.md  Kimi_API接入参考手册.md  MiniMax_API接入参考手册.md  Qwen_API接入参考手册.md  admin_guide.md  endpoint_completeness.md  test_plan_v0.13.0.md  test_system_review.md  企业级API中转站优化架构设计.md  大模型接入协议研究_Review.md  文档发布前Review报告.md  文档最终Review报告_发布前.md  系统配置指南.md  部署方案.md
fusion-relay/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
scripts/: seed_ci_db.py  seed_e2e.py
tests/: conftest.py  test_api.py  test_budget_edge_cases.py  test_budget_order.py  test_cache_analytics.py  test_channeltype.py  test_cost_record_dedup.py  test_coverage_gaps.py  test_deepseek_normalize.py  test_email_binding.py  test_fusion_channel_relay.py  test_fusion_engine.py  test_login_lockout.py  test_login_timing.py  test_middleware.py  test_performance.py  test_pricing_dedup.py  test_reader_cleanup.py  test_relay_billing_logging.py  test_relay_comparison.py  test_streaming_budget.py  test_totp_rate_limit.py  test_verification.py  test_xss.py
web/: .biomeignore  biome.json  eslint.config.js  index.html  package.json  playwright.config.ts  tailwind.config.js  test_output.txt  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+552 files in other folders)
