[project]
name = "uniapi-py"
version = "0.10.18"
description = "UniAPI Python backend - AI API gateway"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "itsdangerous>=2.0.0",
    "passlib[bcrypt]>=1.7.0",
    "python-dotenv>=1.0.0",
    "pyotp>=2.9.0",
    "aiosqlite>=0.20.0",
    "qrcode[pil]>=7.0",
    "webauthn>=2.6.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27.0",
]
redis = ["redis>=5.0.0"]
postgres = ["asyncpg>=0.29.0"]
mysql = ["aiomysql>=0.2.0"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["tests/manual"]
